fixed center align in New/Edit Product

--- a/app/assets/stylesheets/product/new.css
+++ b/app/assets/stylesheets/product/new.css
@@ -3,9 +3,7 @@
 	padding: 30px;
 	background-color: white;
 	width: auto;
-	-moz-box-shadow:    0px 5px 30px 10px #ccc;
-	-webkit-box-shadow: 0px 5px 30px 10px #ccc;
-	box-shadow:         0px 5px 30px 10px #ccc;
+	border-radius: 10px;	
 }
 
 #new_product .row-fluid
@@ -25,11 +23,6 @@
 .icon-eject:hover
 {
 	color: red;
-}
-
-.container
-{
-	width: 73%;
 }
 
 .header
